added profiling for cpu

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,9 +4,20 @@ target_include_directories(problem_spec INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 add_library(solver INTERFACE)
 target_link_libraries(solver INTERFACE problem_spec)
 
+# Profiling
+add_library(kernel_slow_profile kernel_slow.cpp)
+target_link_libraries(kernel_slow_profile PUBLIC problem_spec)
+target_include_directories(kernel_slow_profile PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_compile_definitions(kernel_slow_profile PRIVATE PROFILE)
+
+add_executable(heat_diffusion_profile main.cpp)
+target_link_libraries(heat_diffusion_profile PRIVATE kernel_slow_profile problem_spec solver)
+target_compile_definitions(heat_diffusion_profile PRIVATE PROFILE)
+
+# Non-profiling
 add_library(kernel_slow kernel_slow.cpp)
 target_link_libraries(kernel_slow PUBLIC problem_spec)
 target_include_directories(kernel_slow PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(main main.cpp)
-target_link_libraries(main PRIVATE kernel_slow problem_spec solver)
+add_executable(heat_diffusion main.cpp)
+target_link_libraries(heat_diffusion PRIVATE kernel_slow problem_spec solver)
