--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,27 +21,27 @@ target_link_libraries(test_analytic PRIVATE
 )
 add_test(NAME test_analytic COMMAND srun ./test_analytic)
 
-add_executable(test_kernel_slow test_kernel_slow.cpp)
-target_link_libraries(test_kernel_slow PRIVATE
+add_executable(test_kernel_cpu test_kernel_cpu.cpp)
+target_link_libraries(test_kernel_cpu PRIVATE
     test_helpers
     solvers
     doctest::doctest
 )
-target_include_directories(test_kernel_slow PRIVATE 
+target_include_directories(test_kernel_cpu PRIVATE 
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_SOURCE_DIR}/src
 )
-add_test(NAME test_kernel_slow COMMAND srun ./test_kernel_slow)
+add_test(NAME test_kernel_cpu COMMAND srun ./test_kernel_cpu)
 
-add_executable(test_kernel_fast test_kernel_fast.cpp)
-target_link_libraries(test_kernel_fast PRIVATE
+add_executable(test_kernel_shared_gpu test_kernel_shared_gpu.cpp)
+target_link_libraries(test_kernel_shared_gpu PRIVATE
     test_helpers
     solvers
     doctest::doctest
 )
-target_include_directories(test_kernel_fast PRIVATE 
+target_include_directories(test_kernel_shared_gpu PRIVATE 
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_SOURCE_DIR}/src
     "/opt/ohpc/pub/mpi/openmpi4-gnu12/4.1.8/include"
 )
-add_test(NAME test_kernel_fast COMMAND srun -n 4 ./test_kernel_fast)
+add_test(NAME test_kernel_shared_gpu COMMAND srun -n 4 ./test_kernel_shared_gpu)
